--- a/package.json
+++ b/package.json
@@ -11,7 +11,7 @@
 		"npm": "^5.7.1",
 		"query-string": "^5.0.1",
 		"react": "16.0.0-alpha.6",
-		"react-native": "0.55.4",
+		"react-native": "^0.44.3",
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swiper": "^1.5.13",
 		"react-native-webview-bridge": "^0.33.0",
