--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swiper": "^1.5.14",
 		"react-native-webview-bridge": "^0.33.0",
-		"react-navigation": "^1.0.0-beta.22"
+		"react-navigation": "^1.0.0-beta.22",
+		"react-redux": "^6.0.1",
+		"react-thunk": "^1.0.0",
+		"redux": "^4.0.1"
 	},
 	"devDependencies": {
 		"babel-jest": "22.0.4",
