--- a/package.json
+++ b/package.json
@@ -17,8 +17,8 @@
 		"react-native-webview-bridge": "^0.33.0",
 		"react-navigation": "^1.0.0-beta.22",
 		"react-redux": "^6.0.1",
-		"react-thunk": "^1.0.0",
-		"redux": "^4.0.1"
+		"redux": "^4.0.1",
+		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-jest": "22.0.4",
