--- a/package.json
+++ b/package.json
@@ -12,13 +12,15 @@
 		"query-string": "^5.0.1",
 		"react": "16.0.0-alpha.6",
 		"react-native": "^0.44.3",
+		"react-native-img-cache": "^1.6.0",
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swiper": "^1.5.14",
 		"react-native-webview-bridge": "^0.33.0",
 		"react-navigation": "^1.0.0-beta.22",
 		"react-redux": "^6.0.1",
 		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"rn-fetch-blob": "^0.10.15"
 	},
 	"devDependencies": {
 		"babel-jest": "22.0.4",
