--- a/package.json
+++ b/package.json
@@ -10,8 +10,8 @@
 		"lodash": "^4.17.4",
 		"npm": "^5.7.1",
 		"query-string": "^5.0.1",
-		"react": "16.0.0-alpha.6",
-		"react-native": "^0.44.3",
+		"react": "^16.3.1",
+		"react-native": "^0.55.4",
 		"react-native-img-cache": "^1.6.0",
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swiper": "^1.5.14",
