--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
 	},
 	"dependencies": {
 		"lodash": "^4.17.4",
+		"native-base": "^2.8.1",
 		"npm": "^5.7.1",
 		"query-string": "^5.0.1",
 		"react": "^16.3.1",
