--- a/ios/Podfile
+++ b/ios/Podfile
@@ -2,7 +2,5 @@ platform :ios, '9.0'
 use_frameworks!
 
 target 'ZeroCityShop' do
-  pod 'Firebase/CoreOnly'
-  pod 'Firebase/MLVision'
-  pod 'Firebase/MLVisionTextModel'
+  pod  'Bugly'
 end
