--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,6 +1,18 @@
-platform :ios, '9.0'
-use_frameworks!
+require_relative '../node_modules/react-native/scripts/react_native_pods'
+require_relative '../node_modules/@react-native-community/cli-platform-ios/native_modules'
+
+platform :ios, '10.0'
 
 target 'ZeroCityShop' do
-
+  config = use_native_modules!
+  
+  use_react_native!(
+    :path => config[:reactNativePath],
+    # to enable hermes on iOS, change `false` to `true` and then install pods
+    :hermes_enabled => false
+  )
+   
+  post_install do |installer|
+    react_native_post_install(installer)
+  end
 end
