--- a/package.json
+++ b/package.json
@@ -1,34 +1,34 @@
 {
 	"name": "ZeroCityShop",
-	"version": "0.0.1",
+	"version": "1.0.0",
 	"private": true,
 	"scripts": {
 		"start": "node node_modules/react-native/local-cli/cli.js start",
 		"test": "jest"
 	},
 	"dependencies": {
-		"lodash": "^4.17.4",
-		"native-base": "^2.8.1",
-		"npm": "^5.7.1",
-		"query-string": "^5.0.1",
-		"react": "^16.3.1",
-		"react-native": "^0.55.4",
+		"lodash": "^4.17.21",
+		"native-base": "^2.15.2",
+		"npm": "^7.14.0",
+		"query-string": "^7.0.0",
+		"react": "17.0.2",
+		"react-native": "0.64.1",
 		"react-native-img-cache": "^1.6.0",
-		"react-native-splash-screen": "^3.0.6",
-		"react-native-swiper": "^1.5.14",
-		"react-native-vector-icons": "^6.5.0",
-		"react-native-webview-bridge": "^0.33.0",
-		"react-navigation": "^1.0.0-beta.22",
-		"react-redux": "^6.0.1",
-		"redux": "^4.0.1",
+		"react-native-splash-screen": "^3.2.0",
+		"react-native-swiper": "^1.6.0",
+		"react-native-vector-icons": "^8.1.0",
+		"react-native-webview-bridge": "^0.40.1",
+		"react-navigation": "^4.4.4",
+		"react-redux": "^7.2.4",
+		"redux": "^4.1.0",
 		"redux-thunk": "^2.3.0",
-		"rn-fetch-blob": "^0.10.15"
+		"rn-fetch-blob": "^0.12.0"
 	},
 	"devDependencies": {
-		"babel-jest": "22.0.4",
-		"babel-preset-react-native": "4.0.0",
-		"jest": "22.0.4",
-		"react-test-renderer": "16.0.0-alpha.6"
+		"babel-jest": "27.0.1",
+		"babel-preset-react-native": "4.0.1",
+		"jest": "27.0.1",
+		"react-test-renderer": "17.0.2"
 	},
 	"jest": {
 		"preset": "react-native"
