--- a/package.json
+++ b/package.json
@@ -7,12 +7,12 @@
 		"test": "jest"
 	},
 	"dependencies": {
+		"babel-preset-react-native": "^5.0.0",
 		"lodash": "^4.17.4",
-		"native-base": "^2.8.1",
 		"npm": "^5.7.1",
 		"query-string": "^5.0.1",
-		"react": "^16.3.1",
-		"react-native": "^0.55.4",
+		"react": "16.8.6",
+		"react-native": "0.60.0",
 		"react-native-img-cache": "^1.6.0",
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swiper": "^1.5.14",
@@ -20,13 +20,13 @@
 		"react-native-webview-bridge": "^0.33.0",
 		"react-navigation": "^1.0.0-beta.22",
 		"react-redux": "^6.0.1",
+		"react-timer-mixin": "^0.13.4",
 		"redux": "^4.0.1",
 		"redux-thunk": "^2.3.0",
 		"rn-fetch-blob": "^0.10.15"
 	},
 	"devDependencies": {
 		"babel-jest": "22.0.4",
-		"babel-preset-react-native": "4.0.0",
 		"jest": "22.0.4",
 		"react-test-renderer": "16.0.0-alpha.6"
 	},
