--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -93,6 +93,8 @@ def enableSeparateBuildPerCPUArchitecture = false
  */
 def enableProguardInReleaseBuilds = false
 
+def useIntlJsc = false
+
 android {
     compileSdkVersion rootProject.ext.compileSdkVersion
 
@@ -155,11 +157,15 @@ android {
 
 dependencies {
     implementation project(':react-native-vector-icons')
-    implementation project(':rn-fetch-blob')
     implementation project(':react-native-splash-screen')
     implementation fileTree(dir: "libs", include: ["*.jar"])
     implementation "com.facebook.react:react-native:+"
     implementation 'io.github.meetsl:SCardView:1.1'// From node_modules
+    if (useIntlJsc) {
+        implementation 'org.webkit:android-jsc-intl:+'
+    } else {
+        implementation 'org.webkit:android-jsc:+'
+    }
 }
 
 // Run this once to be able to run the application with BUCK
