--- a/package.json
+++ b/package.json
@@ -16,13 +16,12 @@
 		"react-native-img-cache": "^1.6.0",
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swiper": "^1.5.14",
-		"react-native-vector-icons": "^6.5.0",
+		"react-native-vector-icons": "^8.1.0",
 		"react-navigation": "^1.0.0-beta.22",
 		"react-redux": "^6.0.1",
 		"react-timer-mixin": "^0.13.4",
 		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0",
-		"rn-fetch-blob": "^0.10.15"
+		"redux-thunk": "^2.3.0"
 	},
 	"devDependencies": {
 		"babel-jest": "22.0.4",
