--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -124,7 +124,7 @@ android {
 
     signingConfigs {
         debug {
-            storeFile file('debug.keystore')
+           // storeFile file('debug.keystore')
             storePassword 'android'
             keyAlias 'androiddebugkey'
             keyPassword 'android'
