--- a/package.json
+++ b/package.json
@@ -21,7 +21,8 @@
 		"react-redux": "^6.0.1",
 		"react-timer-mixin": "^0.13.4",
 		"redux": "^4.0.1",
-		"redux-thunk": "^2.3.0"
+		"redux-thunk": "^2.3.0",
+		"rn-fetch-blob": "^0.12.0"
 	},
 	"devDependencies": {
 		"babel-jest": "22.0.4",
