--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
 		"react": "16.8.6",
 		"react-native": "0.60.0",
 		"react-native-img-cache": "^1.6.0",
+		"react-native-root-siblings": "^4.1.1",
 		"react-native-splash-screen": "^3.0.6",
 		"react-native-swiper": "^1.5.14",
 		"react-native-vector-icons": "^8.1.0",
